# singbox-rust

./: .agent.md  .gitignore  .gitmodules  .write_test  ADAPTER_ARCHITECTURE_ISSUES.md  AGENTS.md  ANALYSIS_REPORT.md  BASELINE_UPSTREAM.env  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  COMPLETION_SUMMARY.md  CONFIG_SYSTEMS_ANALYSIS.md  Cargo.toml  DEFERRED_OPTIMIZATIONS.md  Dockerfile  GO_PARITY_MATRIX.md  INTEGRATION_TEST_PLAN.md  LICENSE  Makefile  Makefile.fuzz  NEXT_STEPS.md  PERFORMANCE_REPORT.md  PROCESS_MATCHING_PERFORMANCE.md  PROJECT_STRUCTURE_NAVIGATION.md  README.md  RELEASE_NOTES_v0.2.0.md  SECURITY.md  TEST_COVERAGE.md  TEST_EXECUTION_REPORT.md  USAGE.md  VERIFICATION_RECORD.md  WS_E_TASK_5_REPORT.md  check_log.txt  check_output.txt  check_output_2.txt  check_output_3.txt  check_output_4.txt  check_output_5.txt  check_output_6.txt  (+18 more)
app/: Cargo.toml  build.rs
app/benches/: bench_p0_protocols.rs  connect.rs  dns_cache.rs  performance_baseline.rs  selector_score.rs  shadowsocks_performance.rs  trojan_performance.rs
app/examples/: dsl.sample.txt  http.upstream.json  router.advanced.json  router.block.json  router.by-domain.json  socks.auth.json  socks.noauth.json  socks.udp.json  socks5.upstream.json  subs.nodes.sample.json  upstream.http.json  upstream.socks.json
app/scripts/: rc-verify  run-rc
app/src/: bootstrap.rs  capability_probe.rs  config_loader.rs  core_env.rs  dns_env.rs  env_dump.rs  hardening.rs  http_util.rs  inbound_starter.rs  lib.rs  logging.rs  main.rs  outbound_groups.rs  panic.rs  redact.rs  reqwest_http.rs  router_text.rs  run_engine.rs  run_go.rs  runtime_deps.rs  sidecar_runtime.rs  telemetry.rs  tls_provider.rs  tracing_init.rs  util.rs
app/src/admin_debug/: audit.rs  breaker.rs  cache.rs  http.rs  http_server.rs  http_util.rs  mod.rs  prefetch.rs  reloadable.rs  security.rs  security_async.rs  security_metrics.rs  server_extension.rs
app/src/analyze/: mod.rs  registry.rs
app/src/bootstrap_runtime/: api_services.rs  dns_apply.rs  inbounds.rs  mod.rs  proxy_registry.rs  router_helpers.rs  runtime_shell.rs
app/src/cli/: auth.rs  bench.rs  buildinfo.rs  check.rs.backup  completion.rs  dns_cli.rs  format.rs  fs_scan.rs  generate.rs  geoip.rs  geosite.rs  health.rs  help.rs  json.rs  man.rs  merge.rs  mod.rs  output.rs  prefetch.rs  probe.rs  prom.rs  report.rs  route.rs  ruleset.rs  run.rs  tools.rs  version.rs
app/src/outbound_builder/: mod.rs  quic.rs  shadowsocks.rs  simple.rs  v2ray.rs
app/src/router/: mod.rs
app/src/run_engine_runtime/: admin_start.rs  config_load.rs  context.rs  debug_env.rs  mod.rs  output.rs  supervisor.rs  watch.rs
app/tests/: README.md  adapter_bridge_registry.rs  adapter_bridge_scaffold.rs  adapter_instantiation_e2e.rs  admin_auth_contract.rs  admin_contract.rs  admin_http.rs  admin_http_token.rs  admin_observe.rs  anytls_outbound_test.rs  bench_io_contract.rs  bench_json_schema.rs  bench_p0_protocols.rs  bench_socks5_performance.rs  bridge_resolve_and_health.rs  check_cli.rs  check_json.rs  check_migrate.rs  check_sarif.rs  check_schema_v2.rs  cli.rs  cli_json_contract.rs  cli_smoke.rs  cli_tools_adapter_test.rs  config_ir_pipeline.rs  config_loader_env.rs  config_merge_order.rs  coverage_http_cli.rs  derp_service_bridge_test.rs  diag_tcp_tls.rs  diagnostic_ir_test.rs  direct_block_outbound_test.rs  direct_inbound_test.rs  dns_local_transport_integration.rs  dns_outbound_e2e.rs  dns_transport_comprehensive_test.rs  dos_protection_test.rs  e2e_subs_security.rs  endpoint_instantiation_e2e.rs  error_handling_comprehensive.rs  (+125 more)
app/tests/cli/: admin_auth_fail.trycmd  admin_auth_ok.trycmd  admin_auth_ratelimit.trycmd  check_fail_schema.trycmd  check_help_json.trycmd  check_success.trycmd  core_help.trycmd  format_help.trycmd  format_help_json.trycmd  format_run.trycmd  merge_help.trycmd  merge_help_json.trycmd  merge_inline.trycmd  merge_run.trycmd  prefetch_disabled.trycmd  prefetch_fail.trycmd  prefetch_success.trycmd  route_explain_help.trycmd  route_explain_human.trycmd  route_explain_json.trycmd  router_tools_help.trycmd  run_help.trycmd  run_help_json.trycmd  tools_dns_lookup_explain.trycmd  version.trycmd  version_help.trycmd
app/tests/common/: fixtures.rs  http.rs  mod.rs  workspace.rs
app/tests/data/: bad.json  ok.json  route_min.json  warn.json
app/tests/golden/: check_bad_output.json  check_good_output.json  config_bad.json  config_good.json  config_route.json  version_output.json  (+4 more)
benches/: Cargo.toml  README.md
benches/benches/: aead_crypto.rs  dns_performance.rs  domain_match.rs  protocol_comprehensive.rs  rate_limit_bench.rs  resource_usage.rs  shadowsocks_throughput.rs  socks5_throughput.rs  tcp_relay_e2e.rs  trojan_throughput.rs  vmess_throughput.rs
benches/src/: lib.rs
crates/sb-adapters/: Cargo.toml
crates/sb-admin-contract/: Cargo.toml
crates/sb-api/: Cargo.toml  build.rs
crates/sb-common/: Cargo.toml
crates/sb-config/: Cargo.toml
crates/sb-core/: Cargo.toml  build.rs
crates/sb-metrics/: Cargo.toml
crates/sb-platform/: Cargo.toml
crates/sb-proto/: Cargo.toml
crates/sb-runtime/: Cargo.toml
crates/sb-security/: Cargo.toml
crates/sb-service-derp/: Cargo.toml
crates/sb-subscribe/: Cargo.toml
crates/sb-tls/: Cargo.toml  README.md
crates/sb-transport/: Cargo.toml  REALITY.md  TLS_TRANSPORT_IMPLEMENTATION.md  build.rs
crates/sb-types/: Cargo.toml
examples/code-examples/: Cargo.toml  README.md
fuzz/: Cargo.toml  OPTIMIZATION_COMPLETION_REPORT.md  README.md  generate_seeds.sh  run_regression.sh  verify_metadata.py
fuzz/fuzz_targets/: fuzz_config.rs  fuzz_dns_message.rs  fuzz_socks_udp.rs  fuzz_v2ray_simple.rs
fuzz/scripts/: generate_corpus.sh
labs/interop-lab/: Cargo.toml  README.md
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
xtests/: Cargo.toml  README.md
xtests/.e2e/: bench_udp.csv_dns
xtests/src/: lib.rs
xtests/tests/: bench_v1.rs  bench_v2.rs  check_analyze_groups.rs  check_schema.rs  cli_help_snapshot.rs  env_doc_drift.rs  explain_cli_schema.rs  explain_schema.rs  out_ss_smoke.rs  out_trojan_smoke.rs  pprof_smoke.rs  rc_pack.rs
(+5406 files in other folders)
