[workspace]
resolver = "2"
members = [
  "app",
  "crates/sb-adapters",
  "crates/sb-core",
  "crates/sb-config",
  "crates/sb-metrics",
  "crates/sb-types",
  "crates/sb-proto",
  "crates/sb-runtime",
  "crates/sb-platform",
  "crates/sb-transport",
  "crates/sb-subscribe",
  "crates/sb-api"
]
# 默认只构建 app（其它 crate 在需要时由 feature/依赖拉起）
default-members = ["app"]

[workspace.package]
rust-version = "1.79"

[workspace.lints.rust]
warnings = "deny"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
futures = "0.3"
async-trait = "0.1"
hex = "0.4"
webpki-roots = "0.26"
tracing = "0.1"
bytes = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
prometheus = "0.13"
metrics = "0.24"
sb-types = { path = "crates/sb-types" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# 说明：
# - 统一常用 crates 的版本，减少 features/版本不一致导致的编译报错
# - 其它依赖请在各子 crate 内单独声明（避免 workspace 可选特性的限制）
