[package]
name = "app"
version = "0.1.0"
edition = "2021"

[features]
## 默认最小构建：不启用任何可选特性，降低默认噪声
default = []
minimal = []
## 验收构建聚合特性集（便于一次性开启验收所需能力）
acceptance = [
    "router",
    "tools",
    "schema-v2",
    "observe",
    "admin_debug",
    "auth",
    "rate_limit",
    "prom",
    "preview_route"
]

# Test-gating features (not included in acceptance)
long_tests = []
admin_tests = []
net_e2e = []

# Dev/auxiliary CLI feature gates
bench-cli = ["hdrhistogram", "metrics"]
manpage = []
dev-cli = ["notify", "ignore"]
prefetch = []
admin_envelope = ["sb-admin-contract"]
auth = ["admin_envelope"]
rate_limit = ["admin_envelope"]
jwt = ["jsonwebtoken", "rsa", "p256", "pkcs8", "pkcs1"]  # JWT 提供者启用时再打开

## 路由/运行期与观测能力
router  = ["sb-core", "sb-core/router", "sb-core/out_vless", "sb-core/out_vmess", "sb-core/out_trojan", "sb-core/out_hysteria2", "sb-core/out_tuic", "sb-core/v2ray_transport", "out_ss"]
observe = ["router", "sb-metrics"]
out_ss = ["sb-core/out_ss"]
admin_debug = ["observe", "url", "bytes", "reqwest", "futures-util", "subs_http", "admin_envelope", "auth"]
ssh = ["sb-core/out_ssh"]
tools = ["sb-core", "reqwest"]
tools_http3 = ["reqwest/http3"]
reqwest_unstable = []

## 子能力（从 observe 派生，按需组合）
subs_http   = ["observe", "reqwest", "url", "bytes", "futures-util", "sb-subscribe"]   # /subs/fetch
subs_clash  = ["sb-subscribe/subs_clash"]
subs_singbox= ["sb-subscribe/subs_singbox"]
explain = ["sb-core/explain"]
rule_coverage = ["sb-core/rule_coverage"]
rules_capture = ["admin_debug", "sb-core/rules_capture"]
dsl_plus = ["sb-core/dsl_plus"]
dsl_analyze = ["sb-core/dsl_analyze"]
dsl_derive = ["sb-core/dsl_derive"]
pprof = []
loom = []
io_local_alpha = ["sb-runtime/io_local_alpha"]

# Minimal stub: enable Prometheus CLI paths under acceptance builds
prom = []
tls_reality = ["sb-tls"]
tls_ech = ["sb-tls/ech"]

## Empty features for check-cfg quieting
handshake_alpha = ["sb-runtime", "sb-runtime/handshake_alpha"]
preview_route = ["sb-core/preview_route"]
failpoints = ["sb-core/chaos"]
sbcore_rules_tool = ["sb-core/rules_tool"]
hardening = []
panic_log = []
schema-v2 = []
metrics-support = ["metrics"]
bench = ["hdrhistogram"]
strict_warnings = []
config_schema = ["jsonschema"]
tls-rustls = []
dns-proto = ["trust-dns-proto"]
adapter-hysteria = ["sb-core/out_hysteria"]
adapter-hysteria2 = ["sb-core/out_hysteria2"]
adapter-ssh = ["sb-core/out_ssh"]
adapter-tuic = ["sb-core/out_tuic"]

# Internal gating to include sb-adapters powered inbounds in bootstrap
adapters = [
    "sb-adapters",
    "sb-adapters/adapter-http",
    "sb-adapters/http",
    "sb-adapters/adapter-socks",
    "sb-adapters/socks",
    "sb-adapters/adapter-shadowsocks",
    "sb-adapters/adapter-trojan",
    "sb-adapters/adapter-vmess",
    "sb-adapters/adapter-vless",
    "sb-adapters/adapter-tun",
    "sb-adapters/tun",
    "sb-adapters/mixed",
]

## 新增组合预设（示例）
cli_min = []                         # 仅 CLI，不拉业务依赖
router_full = ["router", "sb-core/router"]         # 打开路由相关
observe_full = ["observe", "sb-core/http_exporter"]  # 打开 metrics exporter
full    = [
    "router_full",
    "observe_full",
    "admin_debug",
    "subs_http",
    # 其它你需要的聚合开关...
]
scaffold = ["sb-core/scaffold"]
service_ntp = ["sb-core/service_ntp"]

## 二进制的特性门控：避免最小构建时拉起未完成/不稳定模块
[[bin]]
name = "run"
path = "src/bin/run.rs"
required-features = ["router"]

[[bin]]
name = "route"
path = "src/bin/route.rs"
required-features = ["router","dsl_analyze","dsl_derive"]

[[bin]]
name = "route-explain"
path = "src/bin/route-explain.rs"
required-features = ["explain"]

[[bin]]
name = "sb-explaind"
path = "src/bin/sb-explaind.rs"
required-features = ["router","explain"]

[[bin]]
name = "preview"
path = "src/bin/preview.rs"
required-features = ["preview_route"]

[[bin]]
name = "dsl"
path = "src/bin/dsl.rs"
required-features = ["router","dsl_plus"]

[[bin]]
name = "preflight"
path = "src/bin/preflight.rs"
required-features = ["router"]

[[bin]]
name = "subs"
path = "src/bin/subs.rs"
required-features = ["router"]

[[bin]]
name = "coverage-http"
path = "src/bin/coverage-http.rs"
required-features = ["rule_coverage"]

[[bin]]
name = "diag"
path = "src/bin/diag.rs"
required-features = ["router"]

## 以下 bin 不需要 router，minimal 即可
[[bin]]
name = "check"
path = "src/bin/check.rs"

[[bin]]
name = "version"
path = "src/bin/version.rs"

[[bin]]
name = "sb-version"
path = "src/bin/sb-version.rs"

[[bin]]
name = "handshake"
path = "src/bin/handshake.rs"
required-features = ["handshake_alpha"]

[[bin]]
name = "sb-bench"
path = "src/bin/sb-bench.rs"

[[bin]]
name = "sb-udp-echo"
path = "src/bin/sb-udp-echo.rs"

[[bin]]
name = "sb-rule-coverage"
path = "src/bin/sb-rule-coverage.rs"
required-features = ["rule_coverage"]

[[bin]]
name = "report"
path = "src/bin/report.rs"
required-features = ["dev-cli"]

[[bin]]
name = "probe-outbound"
path = "src/bin/probe-outbound.rs"
required-features = ["router"]

[[bin]]
name = "ruleset"
path = "src/bin/ruleset.rs"
required-features = ["router"]

[[bin]]
name = "format"
path = "src/bin/format.rs"

[[bin]]
name = "metrics-serve"
path = "src/bin/metrics-serve.rs"
required-features = ["observe"]

[[bin]]
name = "tools"
path = "src/bin/tools.rs"
required-features = ["tools"]

[[bin]]
name = "geosite"
path = "src/bin/geosite.rs"
required-features = ["router"]

[[bin]]
name = "geoip"
path = "src/bin/geoip.rs"
required-features = ["router"]

[[bin]]
name = "transport-plan"
path = "src/bin/transport-plan.rs"
required-features = ["router"]

[dependencies]
anyhow      = { workspace = true }
clap        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
regex       = { workspace = true }
sb-admin-contract = { workspace = true, optional = true }
tokio       = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"], optional = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde_yaml  = { workspace = true }
sha2        = "0.10"
hmac        = "0.12"
subtle      = "2.5"
hex         = "0.4"
url         = { version = "2", optional = true }
bytes       = { version = "1", optional = true }
reqwest     = { version = "0.12", default-features = false, features = ["rustls-tls","stream","json"], optional = true }
httparse    = "1.8"
hyper       = "0.14"
# Align rustls provider: enable ring backend explicitly to avoid runtime provider panic
tokio-rustls = "0.26"
rustls      = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.1"
webpki-roots = "0.26"
rand = "0.8"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
rcgen = "0.12"
trust-dns-resolver = { version = "0.23", default-features = false, features = ["tokio-runtime"] }
sb-core     = { path = "../crates/sb-core", features = ["scaffold"], optional = true }
sb-adapters = { path = "../crates/sb-adapters", optional = true }
sb-config   = { path = "../crates/sb-config", package = "sb-config" }
sb-metrics  = { path = "../crates/sb-metrics", optional = true }
sb-subscribe = { path = "../crates/sb-subscribe", optional = true }
sb-tls      = { path = "../crates/sb-tls", package = "sb-tls", optional = true }
futures-util= { version = "0.3", optional = true }
sb-runtime  = { path = "../crates/sb-runtime", optional = true }
uuid        = { version = "1", features = ["v4"] }

#[dev-dependencies are declared later]
lazy_static = "1.4"
prometheus = "0.13"
ipnet       = "2"
fastrand    = "2"
base64      = "0.22"
percent-encoding = "2.3"
idna        = "0.5"
toml        = { version = "0.8", optional = true }
clap_complete = "4"
clap_mangen = "0.2"
indicatif = "0.17"
parking_lot = "0.12"
atty = "0.2"
chrono = { workspace = true }
arc-swap = "1.7"
# Shared types across workspace (IssueCode, etc.)
sb-types    = { workspace = true }
# Benchmarking and metrics dependencies
hdrhistogram = { version = "7.5", optional = true }
metrics = { version = "0.24", optional = true }
# Schema validation dependencies
jsonschema = { version = "0.25", optional = true }
# DNS protocol support
trust-dns-proto = { version = "0.23", optional = true }
# MMDB support for geoip CLI
maxminddb = "0.23"
ipnetwork = "0.18"
# JWT dependencies (optional, for JWT auth provider)
jsonwebtoken = { version = "9.3", optional = true }
rsa = { version = "0.9", optional = true }
p256 = { version = "0.13", optional = true }
pkcs8 = { version = "0.10", optional = true }
pkcs1 = { version = "0.7", optional = true }
# File watching for hot reload
notify = { version = "6.1", optional = true }
once_cell = "1"
ignore = { version = "0.4", optional = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls","blocking","json"] }
assert_cmd = { version = "2.0" }
predicates = { version = "3.0" }
trycmd = "0.15"
loom = "0.7"
criterion = { version = "0.5", default-features = false }
uuid = { version = "1.0", features = ["v4"] }
sb-admin-contract = { workspace = true }
sb-core     = { path = "../crates/sb-core", features = ["scaffold","router"] }
sb-adapters = { path = "../crates/sb-adapters", features = ["adapter-hysteria", "adapter-shadowsocks", "shadowsocks", "adapter-vmess", "vmess", "adapter-vless", "vless", "adapter-trojan", "trojan", "tls_reality", "transport_ech", "transport_mux"] }
sb-transport = { path = "../crates/sb-transport", features = ["transport_mux"] }
serial_test = "2"

[build-dependencies]
chrono = { workspace = true }

[[test]]
name = "admin_auth_contract"
path = "tests/admin_auth_contract.rs"
required-features = ["admin_debug","auth","rate_limit"]

[[test]]
name = "cli"
path = "tests/cli.rs"
required-features = ["admin_debug","auth","rate_limit"]

[[test]]
name = "reality_tls_e2e"
path = "../tests/reality_tls_e2e.rs"

[[test]]
name = "hysteria_v1_e2e"
path = "../tests/hysteria_v1_e2e.rs"

[[test]]
name = "multiplex_vless_e2e"
path = "tests/multiplex_vless_e2e.rs"
# This E2E test exercises VLESS + multiplex + REALITY/TLS pipeline and is opt-in.
# It remains gated behind a non-declared feature to avoid breaking all-features runs.
required-features = ["net_e2e", "tls_reality", "vless_mux_ready"]

[[bench]]
name = "bench_p0_protocols"
harness = false
required-features = ["bench"]

[[bench]]
name = "connect"
required-features = ["bench"]

[[bench]]
name = "dns_cache"
required-features = ["bench"]

[[bench]]
name = "performance_baseline"
required-features = ["bench"]

[[bench]]
name = "selector_score"
required-features = ["bench"]
