[package]
name = "fuzz"
version = "0.1.0"
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
sb-core = { path = "../crates/sb-core", features=["fuzzing"], default-features = false }
sb-api = { path = "../crates/sb-api", default-features = false }
sb-adapters = { path = "../crates/sb-adapters", default-features = false }

[workspace]
members = ["."]
