[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
publish = false
license.workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
humantime = "2"
which = "6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"