[package]
name = "xtests"
version = "0.1.0"
edition = "2021"
publish = false
license.workspace = true

[features]
default = []
explain = ["singbox-bin/explain"]
pprof = ["singbox-bin/pprof"]

[dev-dependencies]
assert_cmd = "2"
serde_json = "1"
singbox-bin = { path = "../app", package = "app" }

[package.metadata]
description = "Workspace integration tests"
