[package]
name = "sb-admin-contract"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
license.workspace = true
description = "Shared envelope and error types for admin endpoints and CLI JSON."
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
