[package]
name = "sb-api"
version = "0.1.0"
edition = "2021"
description = "API services for singbox-rust including Clash API and V2Ray API"
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
# Web framework and HTTP server
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1.35", features = ["full"] }

# Serialization and JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# WebSocket support
futures-util = "0.3"

# gRPC support for V2Ray API
tonic = { version = "0.11", optional = true }
prost = { version = "0.12", optional = true }
prost-types = { version = "0.12", optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
http-body = { version = "0.4", optional = true }

# Logging and error handling
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"
humantime = "2.1"
libc = "0.2"

# HTTP types
http = "1.0"

# Internal crates
sb-core = { path = "../sb-core", features = ["router"] }
sb-common = { path = "../sb-common" }
sb-config = { path = "../sb-config" }
sb-subscribe = { path = "../sb-subscribe", features = ["subs_provider_parse", "subs_http"], optional = true }

[features]
default = ["clash-api"]
clash-api = []
provider-reload = ["sb-subscribe"]
v2ray-api = ["tonic", "prost", "prost-types", "tokio-stream", "http-body"]

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect"] }
serial_test = "3"
