[package]
name = "sb-api"
version = "0.1.0"
edition = "2021"
description = "API services for singbox-rust including Clash API and V2Ray API"
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
# Web framework and HTTP server
axum = { version = "0.7", features = ["ws", "macros"] }
axum-server = { version = "0.8", features = ["tls-rustls"], optional = true }
async-trait = "0.1"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }

# Serialization and JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
bytes = "1"

# WebSocket support
futures-util = "0.3"
futures = "0.3"

# gRPC support for V2Ray API
tonic = { version = "0.11", optional = true }
prost = { version = "0.12", optional = true }
prost-types = { version = "0.12", optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
http-body = { version = "0.4", optional = true }

# Logging and error handling
log = "0.4"
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
humantime = "2.1"
libc = "0.2"
parking_lot = "0.12"
socket2 = "0.6"
base64 = "0.22"
hex = "0.4"
hmac = "0.12"
httparse = "1.8"
sha2 = "0.10"
subtle = "2.5"
rand = "0.8"
once_cell = "1"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"], optional = true }
rustls-pemfile = { version = "2", optional = true }
sb-admin-contract = { workspace = true, optional = true }
jsonwebtoken = { version = "9.3", optional = true }
p256 = { version = "0.13", optional = true }
pkcs8 = { version = "0.10", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"], optional = true }
prometheus = { version = "0.14", optional = true }

# HTTP types
http = "1.0"

# Internal crates
sb-core = { path = "../sb-core" }
sb-common = { path = "../sb-common" }
sb-config = { path = "../sb-config" }
sb-types = { path = "../sb-types" }
sb-transport = { path = "../sb-transport" }
sb-subscribe = { path = "../sb-subscribe", features = ["subs_provider_parse", "subs_http"], optional = true }

[features]
default = ["clash-api"]
clash-api = []
metrics = ["dep:prometheus"]
provider-reload = ["sb-subscribe"]
v2ray-api = ["tonic", "prost", "prost-types", "tokio-stream", "http-body"]
ssmapi = ["dep:axum-server"]
debug = ["dep:tokio-rustls", "dep:rustls-pemfile", "dep:sb-admin-contract"]
auth = ["debug"]
rate_limit = ["debug"]
jwt = ["auth", "dep:jsonwebtoken", "dep:p256", "dep:pkcs8", "dep:reqwest"]
admin_tests = ["debug", "auth", "rate_limit"]

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect"] }
serial_test = "3"
fastrand = "2"
tempfile = "3"
