[package]
name = "sb-config"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sb-types = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls","blocking"], optional = true }

[features]
dns_http = ["reqwest"]
