[package]
name = "sb-config"
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
license = "Apache-2.0"
description = "Configuration management for singbox-rust"
repository = "https://github.com/singbox-rust/singbox-rust"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sb-types = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls","blocking"], optional = true }
uuid = { workspace = true }
humantime = "2"

[features]
default = []
dns_http = ["reqwest"]
dev-cli = []
go1124_compat = []
